# CDT_2D

./: .directory  .gitignore  CDT_2D.kdev4  CMakeLists.txt  README.md  doxygen_config  label.cpp  label.h  launcher.py  main  main.cpp  main_test.cpp  python-script_tobenamed.py  setup.sh  triangle.cpp  triangle.h  vertex.cpp  vertex.h
.kdev4/: CDT_2D.kdev4
functions/: initialize_triangulation.cpp  initialize_triangulation.h
include/: edge.h  gaugeelement.h  label.h  randomgenerator.h  simplex.h  triangle.h  triangulation.h  vertex.h
lib/: __init__.py  analysis.py  cdt2d_marco.sh  data.py  input.cdt  launch_script.py  make_script.py  parser.py  platforms.py  test.py  tools.py  utils.py
lib/AdjacencyList/: Makefile  make_adjacency.cpp  read_adjacency.cpp
lib/analysis/: __init__.py  fit.py  old.py  pre.py  profiles.txt  tools.py
lib/parser/: __init__.py  msgs.py
lib/scripts/: ciao.sh  launch_script.py  make_script.py  sbatch.sh
src/: edge.cpp  gaugeelement.cpp  label.cpp  randomgenerator.cpp  simplex.cpp  triangle.cpp  triangulation.cpp  vertex.cpp
src/debug/: debug.cpp
src/moves/: moves.cpp
src/triangulation/: adjacency.cpp  debug.cpp  moves.cpp
test/: Makefile  campaign_example.txt  campaign_test0.txt  launcher_builder.py  main.cpp  parser.hpp  test  test.cpp  test.py
test/parallel_tests/: Makefile  test_omp.cpp  test_omp_unparallel.cpp
triangulation/: label.h  simplex.cpp  simplex.h  triangle.cpp  triangle.h  triangulation.cpp  triangulation.h  vertex.cpp  vertex.h
